<h5>5.01 Beta 4 [2021-03-21]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.16, PHP 8.0.3
<hr>
- Update functions.image.php (BigKev73)
- various cosmetics/updates (mamba)
- add TestdataButtons.php (mamba)

<h5>5.01 Beta 3 [2021-02-14]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.2
<hr>
- 'isset' replaced with coalesce (mamba)
- rename $newbbpermHandler (mamba)
- update  PHPDoc Return type (mamba)
- Cascading dirname(...) calls (mamba)
- fix Insecure 'htmlspecialchars(...)' usage (mamba)
- Assignment in condition (mamba)
- Update functions.image.php: removes the forced height value from the image (BigKev73)
- fix moving a Topic (BigKev73)
- Force the reloading of viewforum page when the browser back button is used. PR #92 (BigKev73)
- Force the reloading of index page when the browser back button is used. PR #93 (BigKev73)
- get the next unread post ID based on the $lastreadpost_id PR #94 (BigKev73)
- add support jumping to the next post after the LastReadPost PR #95 (BigKev73)

<h5>5.01 Beta 2 [2021-01-28]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
<hr>
- Added to make jump ICON, jump and scroll to the correct "last post" (BigKev73)
- Added addition modifications to make "last post" links scroll to correct location on page (BigKev73)
- Added additional changes for scrolling to last post (BigKev73)
- fix when trying to permanately delete a deleted post reports no selection made. (BigKev73)
- Changes to fix logic issues with creating thumbnails, setting the thumbnail path and setting the img_info string (BigKev73)

<h5>5.01 Beta 1 [2021-01-26]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.1
<hr>
- Facebook UI Style Rating (xd9527/mamba)
- fix $status (goffy/zyspec)
- fix split bug (bioskop/mamba)
- update for XoopsPoll 2.01 (mamba)
- renamed 'PHP_SELF' to 'SCRIPT_NAME' (mamba)
- fix SetAttachment in Post.php PR#80 (BigKev73)
- fix multi-file attachment in post.php PR#81 (BigKev73)
- fix user jumping directly to the last post in ForumHandler.php PR#82 (BigKev73)