@@ -3,6 +3,7 @@
 - Update functions.image.php (BigKev73)
 - various cosmetics/updates (mamba)
 - add TestdataButtons.php (mamba)
+- removed NEWBB_ADMIN_DEFINED from admin.php (JJDai)
 
 <h5>5.01 Beta 3 [2021-02-14]</h5>  Dev: XOOPS 2.5.11, PHP 7.4.14, PHP 8.0.2
 <hr>
